--- a/enyo/package.json
+++ b/enyo/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "less": "1.3.3",
-        "uglify-js": "2.2.5",
+        "uglify-js": ">=2.6.0",
         "shelljs": "0.8.5",
         "nopt": "2.1.2"
     }
