--- a/lib/foss/underscore/package.json
+++ b/lib/foss/underscore/package.json
@@ -27,7 +27,7 @@
     "pretty-bytes-cli": "^1.0.0",
     "qunit-cli": "~0.2.0",
     "qunitjs": "^1.18.0",
-    "uglify-js": "2.4.x"
+    "uglify-js": ">=2.6.0"
   },
   "scripts": {
     "test": "npm run test-node && npm run lint",
