--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"busboy": "~0.0.15",
 		"combined-stream": "~1.0.5",
 		"dropbox": "~2.4.0",
-		"express": "~3.4.8",
+		"express": ">=3.11.0",
 		"graceful-fs": "4.1.11",
 		"less": "~1.7.5",
 		"mime": "~1.3.4",
