--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"express": ">=3.11.0",
 		"graceful-fs": "4.1.11",
 		"less": "~1.7.5",
-		"mime": "~1.3.4",
+		"mime": ">=1.4.1",
 		"mkdirp": "~0.5.1",
 		"nopt": "~3.0.6",
 		"npmlog": "~4.0.1",
